# FrontierTextHandler

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TEXT_EXTRACTION_STATUS.md  binary_file.py  headers.json  main.py  pyproject.toml
.github/workflows/: tests.yml
docs/: game-files.md  translation-format.md
src/: __init__.py  binary_file.py  common.py  crypto.py  diff.py  export.py  file_io.py  ftxt.py  import_data.py  jkr_compress.py  jkr_decompress.py  line_length.py  merge.py  npc.py  placeholder_validation.py  pointer_tables.py  quest.py  scenario.py  text_folding.py  transform.py
tests/: __init__.py  test_binary_file.py  test_common.py  test_crypto.py  test_csv_workflow.py  test_diff.py  test_export.py  test_ftxt_quest.py  test_import_data.py  test_jkr.py  test_line_length.py  test_merge.py  test_npc_dialogue.py  test_placeholder_validation.py  test_roundtrip.py  test_scenario.py  test_text_folding.py  test_transform.py  test_validate.py
