[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "FrontierTextHandler"
version = "1.0.0"
description = "Extract, edit, and reimport text from Monster Hunter Frontier game files"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.7"
authors = [
    { name = "Houmgaor" },
]
keywords = ["monster-hunter", "frontier", "modding", "translation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Houmgaor/FrontierTextHandler"
Repository = "https://github.com/Houmgaor/FrontierTextHandler"
Issues = "https://github.com/Houmgaor/FrontierTextHandler/issues"

[project.scripts]
frontier-text-handler = "main:main"
